<resources>
    <string name="app_name">TravelAdvisor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">API_KEY</string>
    <string name="address">ADDRESS</string>
    <string name="title">TravelAdvisor</string>
    <string name="sub_title">We help plan trips!</string>
    <string name="fb_sign">Sign in with facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="skip">SKIP</string>
    <string name="flight">Available Flights</string>
    <string name="f">Flights</string>
    <string name="from">From</string>
    <string name="delhi">Delhi</string>
    <string name="to">To</string>
    <string name="bang">Bangalore</string>
    <string name="search">SEARCH</string>
    <string name="select_place">Select the place</string>
    <string name="hint">Search non-listed places</string>
    <string name="hotel">Hotel</string>
    <string name="nice_to">Nice to see you back !</string>
    <string name="new_user">New User ? Sign up Here!</string>
    <string name="photo">PHOTOS</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="reviews">REVIEWS</string>
    <string name="save">SAVE</string>
    <string name="food_court">Food Court</string>
    <string name="saved_places">Saved Places</string>
    <string name="tourist">Tourist Spots</string>
    <string name="shopping">Shopping</string>
    <string name="flights">Flights</string>
    <string name="perfect_choice">Perfect Choice !</string>
    <string name="steps">Sign up just 2 steps away.</string>
    <string name="back">Back</string>
    <string name="already_registered">Already Registered ?\nLogin Here.</string>
    <string name="time">TIME</string>
    <string name="ads">API_KEY</string>
    <string name="no_data">No Data to display</string>

    <string-array name="options">
        <item></item>
        <item>Saved Places</item>
        <item>Saved Hotels</item>
        <item>Saved Restaurants</item>
        <item>Share App</item>
        <item>Logout</item>
    </string-array>

    <string-array name="icons">
        <item></item>
        <item>@drawable/ic_location</item>
        <item>@drawable/ic_hotel</item>
        <item>@drawable/ic_food</item>
        <item>@drawable/ic_share</item>
        <item>@drawable/ic_logout</item>
    </string-array>
</resources>
