<?xml version="1.0" encoding="utf-8"?>

<com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:parallax_factor="2.5"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cfcfcf"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/mainFrame"
            android:layout_width="fill_parent"
            android:layout_height="350dp"
            android:background="@drawable/nigh_place">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#3000">

            </RelativeLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <com.mindsparkk.traveladvisor.Utils.MyBoldTextView
                android:id="@+id/cityname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Delhi, India"
                android:textColor="#fff"
                android:textSize="28sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="330dp"
            android:background="@drawable/round_rectangle"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tourist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/tourist"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:id="@+id/hotels"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_hotel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/hotel"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:id="@+id/restaurants"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/food_court"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:id="@+id/shopping"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_cab" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/shopping"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dfdfdf" />

            <LinearLayout
                android:id="@+id/flight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="18dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_flights" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/flights"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</com.nirhart.parallaxscroll.views.ParallaxScrollView>
